--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <title>Pick Five Legends</title>
+  <title>Pick Hundred Legends</title>
   <main>
      <!-- heading section start -->
     <section>
